--- a/Collection.html
+++ b/Collection.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="design ui ux visual Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/Collection.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
@@ -54,6 +55,28 @@
 
 	</section>
 	
+	<hr>
+	<br>
+
+	<div class="footer text-center">
+
+		<p>Thank you for reading!</p>
+  <ul>
+    
+    <li><a href="index.html#work">More Projects</a></li>
+    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
+    <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
+    <li>
+      <p>👋</p>
+    </li>
+  </ul>
+
+  
+</div>
+	<br>
+	<br>
+
 
 	
     <script src='../ga.js'></script>
