--- a/Q's_farmer.html
+++ b/Q's_farmer.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="An app aims to provide a platform for customers to order products and reserve events of farmers' market."/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/farm.css">
 	<link rel="stylesheet" href="work/css/scroll.css">
 	<link href="https://fonts.googleapis.com/css?family=Istok+Web:700" rel="stylesheet">
@@ -424,19 +425,28 @@ One of the biggest benefits of local farmers' markets is to create social ties a
 </section>
 
 
-	<footer>
-		<div class="wrapper">
-			<div class="rights">
-			
-				
-				<p>Icons from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
-				<p>© All Copyrights reserved. <a href="index.html"> Eric Chi </a>2020</p>
-			</div>
+	<hr>
+	<br>
 
-			
-		</div>		
-	</footer>
-	<!--  End footer  -->
+	<div class="footer text-center">
+
+		<p>Thank you for reading!</p>
+  <ul>
+    
+    <li><a href="index.html#work">More Projects</a></li>
+    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
+    <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
+    <li>
+      <p>👋</p>
+    </li>
+  </ul>
+
+  
+</div>
+	<br>
+	<br>
+
 	<script src="work/js/jquery-2.1.1.js"></script>
 	<script src="work/js/scroll.js"></script> <!-- Resource jQuery -->
 </body>
