--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="So Cool English Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/SoCool.css">
 	<link rel="stylesheet" href="work/css/scroll.css">
 	<link href="https://fonts.googleapis.com/css?family=Istok+Web:700" rel="stylesheet">
@@ -270,6 +271,28 @@
 				<img class="animated wow fadeIn" src="work/img/bottom.png">
 
 			</section>
+			<hr>
+	<br>
+
+	<div class="footer text-center">
+
+		<p>Thank you for reading!</p>
+  <ul>
+    
+    <li><a href="index.html#work">More Projects</a></li>
+    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
+    <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
+    <li>
+      <p>👋</p>
+    </li>
+  </ul>
+
+  
+</div>
+	<br>
+	<br>
+
 
 	<script src="work/js/jquery-2.1.1.js"></script>
 	<script src="work/js/scroll.js"></script> 
