--- a/blushup.html
+++ b/blushup.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="Blushup ui ux Eric chi designer "/>
 	<!-- <link rel="stylesheet" type="text/css" href="work/css/reset.css"> -->
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/blushup.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
@@ -64,9 +65,6 @@
 			</li>
 		</ul>
 
-		
-
-		<hr>
 
 		<h2>Redesign Preview</h2>
 		<iframe style="border: 1; margin-left:20%; margin-top: 5%;" width="60%" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D2353%253A6%26viewport%3D445%252C469%252C0.2153937965631485%26scaling%3Dscale-down-width" allowfullscreen></iframe>
@@ -75,6 +73,28 @@
 		<a href="https://blushup.com/" target="_blank"><p>Visit Blushup.com</p></a>
 
 	</section>
+
+	<hr>
+	<br>
+
+	<div class="footer text-center">
+
+		<p>Thank you for reading!</p>
+  <ul>
+    
+    <li><a href="index.html#work">More Projects</a></li>
+    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
+    <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
+    <li>
+      <p>👋</p>
+    </li>
+  </ul>
+
+  
+</div>
+	<br>
+	<br>
 
 
 	
