--- a/qeesi.html
+++ b/qeesi.html
@@ -72,6 +72,28 @@
 
 	</section>
 	
+	<hr>
+	<br>
+	
+	<div class="footer text-center">
+
+		<p>Thank you for reading!</p>
+  <ul>
+    
+    <li><a href="index.html#work">More Projects</a></li>
+    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
+    <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
+    <li>
+      <p>👋</p>
+    </li>
+  </ul>
+
+  
+</div>
+	<br>
+	<br>
+
 
 	
     <script src='../ga.js'></script>
