--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/OB.png); width: 109%;">
-							<a href="rackspace.html" target="blank"><div class="desc">
+							<a href="rackspace.html" ><div class="desc">
 									<div class="con">
 										<h1>ObjectRocket - a rackspace company</h1>
 										<span>UX Intern</span>
@@ -235,7 +235,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/Qeesi.png);  ">
-							<a href="qeesi.html" target="blank"><div class="desc">
+							<a href="qeesi.html" ><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
 										<span>UI/UX</span>
@@ -247,7 +247,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(work/img/qj_mockup.jpg); width: 102%;">
-							<!-- <a href="#" target="blank">--><div class="desc"> 
+							<!-- <a href="#" >--><div class="desc"> 
 									<div class="con">
 										<h1>Q's Farmer App</h1>
 										<span>updating</span>
@@ -260,7 +260,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/blushup.svg); margin-left:7% ;width: 93%;">
-							<a href="blushup.html" target="blank"><div class="desc">
+							<a href="blushup.html"><div class="desc">
 									<div class="con">
 										<h1>Blushup</h1>
 										<span>UI/UX</span>
@@ -272,7 +272,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(work/img/mac.gif);">
-								<a href="SoCoolEng.html" target="blank"><div class="desc">
+								<a href="SoCoolEng.html"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
 										<span>Product Design</span>
@@ -295,7 +295,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/img-4.jpg); ">
-								<a href="Collection.html" target="blank"><div class="desc">
+								<a href="Collection.html" ><div class="desc">
 									<div class="con">
 										<h1>Design Collection</h1>
 										<span>FUN!</span>
