--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Design</h3>
-									<p>Design is undividable from my daily life. With strong curiosity, I explore amazing designs in our world. As a UX designer, I relish interface design, graphic design and user experience design.</p>
+									<p>Design is undividable from my daily life. With strong curiosity, I explore amazing designs in our world. As a UX designer, I do ux design, interaction design and viusal design.</p>
 								</div>
 							</div>
 						</div>
@@ -350,46 +350,12 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 								</span>
 								<div class="desc">
 									<h3>Coding</h3>
-									<p>To me, coding is not only a powerful tool but also a new perspective on the world. From back-end to front-end, I have experience in Python, HTML/CSS, Bootstrap, PHP, Javascript and React.js. </p>
+									<p>To me, coding is not only a powerful tool but also a new perspective on the world. As a frontend developer, I have experience in HTML/CSS, PHP, Javascript, React.js and Angular </p>
 									
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-4">
-								<span class="icon">
-									<i class="icon-heart3"></i>
-								</span>
-								<div class="desc">
-									<h3>Empathy</h3>
-									<p> Empathy is all about standing in someone's shoes and seeing from other's perspectives. Regard myself as a user-centered designer, empathy is always my first priority.
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-5">
-								<span class="icon">
-									<i class="icon-file-openoffice"></i>
-								</span>
-								<div class="desc">
-									<h3>Prototyping</h3>
-									<p> Prototype is the intersection of idea and reality, and prototyping is the ability to give ideas life. With prototyping, I can exhibit my blueprints to others and test them over and over.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-6">
-								<span class="icon">
-									<i class="icon-flow-children"></i>
-								</span>
-								<div class="desc">
-									<h3>Collaboration</h3>
-									<p>Teamwork <br> makes  <br> the <br> dream <br>work. <br>
-									I embrace the opportunity to cooperate from others. </p>
-								</div>
-							</div>
-						</div>
+						
 					</div>
 				</div>
 			</section>
