--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	</head>
 	<body>
-	<div class="loader" id="loader"> <img src="images/preloader.gif"></div> 
+	
 	<div id="colorlib-page">
 		<div class="container-wrap">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
@@ -172,16 +172,16 @@ Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi Al
 										<h3>Passionate</h3>
 									</div>
 								</div>
+								
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInDown">
 									<div class="services color-3">
-										<span class="icon2"><i class="icon-paperplane"></i></span>
-										<h3>Innovative</h3>
+										<span class="icon2"><i class="icon-target3"></i></span>
+										<h3>User-Centered</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInDown">
 									<div class="services color-4">
-										<span class="icon2"><i class="icon-target3"></i></span>
-										<h3>User-Centered</h3>
+										<img src="images/eric.gif" width="100">
 									</div>
 								</div>
 							</div>
