--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 	<meta name="twitter:card" content="" />
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Quicksand&display=swap" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
