--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 	<meta name="twitter:card" content="" />
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Quicksand&display=swap" rel="stylesheet">
-	
-	<!-- Animate.css -->
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
