--- a/index.html
+++ b/index.html
@@ -79,15 +79,13 @@
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="resume">resume</a></li>
 						<li><a href="#" data-nav-section="work">Work</a></li>
-						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small>&copy; 
-Copyright <script>document.write(new Date().getFullYear());</script> Eric Chi All rights reserved. <br> Made with  <a href="https://colorlib.com" target="_blank">❤</a> </a></span></small></p>
+				<p><small>Made with  <a href="https://colorlib.com" target="_blank">❤</a> </a></span></small></p>
 				<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://www.instagram.com/ericychii/" target="blank"><i class="icon-instagram"></i></a></li>
