--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<a href="index.html"><div class="author-img" style="background-image: url(images/eric.svg);"></div></a>
-				<span class="position"><p>UI/UX Designer <br> Front-end Developer </p></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -147,7 +146,7 @@
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<div class="aboutme">
-										<p>Eric Chi, a <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>UX Designer</strong> </a> studying Master of Information Science at UT Austin. </p> 
+										<p>Eric Chi, a <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>UX & Product Designer</strong> </a> studying Master of Information Science at UT Austin. </p> 
 										<p>I have  <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>4+ years experience</strong></a> in UI/UX design & research and <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>3+ years experience</strong></a> in front-end & web development.</p></div>
 										
 
