--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -271,7 +271,7 @@
 				<img class="animated wow fadeIn" src="work/img/bottom.png">
 
 			</section>
-			<hr>
+	<hr class="container">
 	<br>
 
 	<div class="footer text-center">
