--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Petwin</h1>
-										<span>UI/UX</span>
+										<span>Experience for pet adoption</span>
 									</div>
 								</div>
 							</div>
@@ -233,7 +233,7 @@
 							<a href="qeesi.html" ><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
-										<span>UI/UX</span>
+										<span>Redeisgn for online questionnaire</span>
 									</div>
 								</div>
 							</div>
@@ -258,7 +258,7 @@
 							<a href="blushup.html"><div class="desc">
 									<div class="con">
 										<h1>Blushup</h1>
-										<span>UI/UX</span>
+										<span>Redesign for starup company</span>
 									</div>
 								</div>
 							</div>
@@ -270,7 +270,7 @@
 								<a href="SoCoolEng.html"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
-										<span>Product Design</span>
+										<span>Experience for English learning</span>
 									</div>
 								</div>
 							</div>
@@ -281,7 +281,7 @@
 								<a href="https://youtu.be/8EZuEmR3hVs" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Parkking</h1>
-										<span>Product/UX</span>
+										<span>Experience for automotive navigation</span>
 									</div>
 								</div>
 							</div>
