--- a/franklin.html
+++ b/franklin.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Qeesi | Eric Chi's Portfolio</title>
+	<title>Franklin | Eric Chi's Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="ui ux Qeesi redesign design research designer Eric Chi"/>
+	<meta name="description" content="ui ux AI language learning IBM design research designer Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="work/css/qeesi.css">
+	<link rel="stylesheet" type="text/css" href="work/css/franklin.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
@@ -27,15 +27,15 @@
 </head>
 <body>
 
-	<section class="billboard dark">
+	<section class="billboard light">
 		<header>
 			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
 		</header>
 
-		<div class="caption dark clearfix focus-in-contract-bck">
-			<h1>Qeesi</h1>
-			<p>UI/UX</p>
+		<div class="caption light clearfix focus-in-contract-bck">
+			<h1>Franklin</h1>
+			<p>UX & Product</p>
 			<hr>
 		</div>
 		
@@ -44,37 +44,36 @@
 	<section class="main-content">
 
 	<h2>Overview</h2>
-	<p>Qeesi is a questionnaire that helps patients to identify multiple chemical intolerances and it used to be paper-based. Through time, the Qeesi team migrated it from paper to website. Now, the Qeesi team is looking for a redesign to improve the online version of Qeesi.</p>
+	<p>In summer 2019, I did a three month internship at Rackspace. I worked as a UX intern with the UX team of ObjectRocket and I was responsible for evaluating and improving their new database platform which helped increase the satisfaction of users and bring new customers.</p>
 	
 	<div class="container text-center">
   <div class="row">
     <div class="col">
       <p class="role">My Role</p>
-      <p>UI/UX Designer<br>User Researcher<br>Visual Designer</p>
+      <p>UX Intern</p>
     </div>
     <div class="col">
       <p class="role">Timeline</p>
-      <p>January - May 2019
+      <p>May - August 2019
     </div>
     <div class="col">
       <p class="role">Company</p>
-      <p>UT Health Science Center at San Antonio  </p>
+      <p>ObjectRocket/Rackspace</p>
     </div>
   </div>
 </div>
 
-	<h2>Process & Outcome</h2>
-
-<div style="margin-left:10%;">
-
-	<iframe style="border: none;" width="90%" height="800px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FlVwBeHZbwUTR3sp8zm5oUe%2FQeesi-Presentation%3Fnode-id%3D0%253A2%26viewport%3D314%252C332%252C0.09858471900224686%26scaling%3Dcontain" allowfullscreen></iframe>
-</div>
+	<h2>Demo Video</h2>
+	
+	<div class="text-center">
+	<iframe width="60%" height="600" src="https://www.youtube.com/embed/Jsq8c9-f2r8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 
 	</section>
-	
+
 	<hr class="container">
 	<br>
-	
+
 	<div class="footer text-center">
 
 		<p>Thank you for reading!</p>
@@ -94,8 +93,6 @@
 	<br>
 	<br>
 
-
-	
     <script src='../ga.js'></script>
 </body>
 </html>
