add franklin n parkking

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="project" style="background-image: url(images/parkking.png); margin-left:7% ;width: 93%;">
-								<a href="https://youtu.be/8EZuEmR3hVs" target="blank"><div class="desc">
+								<a href="parkking.html" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Parkking</h1>
 										<span>Experience for automotive navigation</span>
@@ -289,11 +289,11 @@
 
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-4.jpg); ">
-								<a href="Collection.html" ><div class="desc">
+							<div class="project" style="background-image: url(images/franklin.png); ">
+								<a href="franklin.html" ><div class="desc">
 									<div class="con">
-										<h1>Design Collection</h1>
-										<span>FUN!</span>
+										<h1>Franklin</h1>
+										<span>Experience for improving language skills</span>
 									</div>
 								</div>
 							</div>
