--- a/parkking.html
+++ b/parkking.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="work/css/franklin.css">
+	<link rel="stylesheet" type="text/css" href="work/css/parkking.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
@@ -29,12 +29,12 @@
 
 	<section class="billboard light">
 		<header>
-			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="images/eric-white.svg" alt=""/></a>
 			
 		</header>
 
 		<div class="caption light clearfix focus-in-contract-bck">
-			<h1>Franklin</h1>
+			<h1>Prakking</h1>
 			<p>UX & Product</p>
 			<hr>
 		</div>
@@ -44,7 +44,7 @@
 	<section class="main-content">
 
 	<h2>Overview</h2>
-	<p>Franklin is an AI assistant that helps people to improve language skills through conversations with Franklin so that she is prepared for any situation. As a designer, I took the responsibility to design the experience from scratch. Learning a new language is always tough for people and my team and I tried making the process painless and joyful.</p>
+	<p>Parkking a driving and parking assist device and it combines mobile app and windshield display. It’s a revolution of the car navigation system with a parking reservation. It helps drivers to focus on driving without being distracted by switching between mobile app and driving. This project includes a thorough process from research to design.</p>
 	
 	<div class="container text-center">
   <div class="row">
@@ -54,11 +54,11 @@
     </div>
     <div class="col">
       <p class="role">Timeline</p>
-      <p>January - May 2019
+      <p>August - December 2019
     </div>
     <div class="col">
       <p class="role">Platform</p>
-      <p>Web & Mobile</p>
+      <p>Windshield & Moblie</p>
     </div>
   </div>
 </div>
@@ -67,8 +67,10 @@
 	
 
 	<div class="embed-responsive embed-responsive-16by9 text-center container">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Jsq8c9-f2r8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8EZuEmR3hVs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+
+
 
 
 
