--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInDown">
 									<div class="services color-4">
-										<img src="images/eric.gif" width="100">
+										<div style="margin-left: 15px;"><img src="images/eric.gif" width="100"></div>
 									</div>
 								</div>
 							</div>
