--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 							<a href="rackspace.html" ><div class="desc">
 									<div class="con">
 										<h1>ObjectRocket - a rackspace company</h1>
-										<span>UX Intern</span>
+										<span>UX Internship</span>
 									</div>
 								</div>
 							</div>
