--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 							<a href="qeesi.html" ><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
-										<span>Redeisgn for online questionnaire</span>
+										<span>Redeisgn of online questionnaire</span>
 									</div>
 								</div>
 							</div>
@@ -258,7 +258,7 @@
 							<a href="blushup.html"><div class="desc">
 									<div class="con">
 										<h1>Blushup</h1>
-										<span>Redesign for starup company</span>
+										<span>Redesign of online reservation platforms</span>
 									</div>
 								</div>
 							</div>
