--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -101,7 +101,7 @@
 
 		<div class="caption dark clearfix focus-in-contract-bck">
 			<h1>So Cool English</h1>
-			<p>Web Development / UIUX</p>
+			<p>Product/UX</p>
 			<hr>
 		</div>
 		
