--- a/franklin.html
+++ b/franklin.html
@@ -35,7 +35,7 @@
 
 		<div class="caption light clearfix focus-in-contract-bck">
 			<h1>Franklin</h1>
-			<p>UX & Product</p>
+			<p>Product/UX/AI</p>
 			<hr>
 		</div>
 		
