--- a/qeesi.html
+++ b/qeesi.html
@@ -35,7 +35,7 @@
 
 		<div class="caption dark clearfix focus-in-contract-bck">
 			<h1>Qeesi</h1>
-			<p>UI/UX</p>
+			<p>Redesign/UI/UX</p>
 			<hr>
 		</div>
 		
