--- a/parkking.html
+++ b/parkking.html
@@ -35,7 +35,7 @@
 
 		<div class="caption light clearfix focus-in-contract-bck">
 			<h1>Prakking</h1>
-			<p>UX & Product</p>
+			<p>Product/UX/VUI</p>
 			<hr>
 		</div>
 		
