--- a/SoCoolEng.html
+++ b/SoCoolEng.html
@@ -192,7 +192,7 @@
 
 	<section class="value wrapper">
 		<h2 class="animated wow fadeInUp">User's Core Values</h2>
-			<span class="animated wow fadeInUp">Deprived from survey, interview and comparative analysis, I determind three core value that user care the most. </span>
+			<span class="animated wow fadeInUp">Deprived from survey, interview and competitive analysis, I determind three core value that user care the most. </span>
 
 
 		<ul class="clearfix">
@@ -204,7 +204,7 @@
 			<li class="animated wow fadeInDown"  data-wow-delay=".4s">
 			
 			<img src="work/img/promotions.svg">
-			<p><strong>Positive Effect</strong><br>User expects a tool to bring them positive impact.</p>
+			<p><strong>Progress</strong><br>User expects a tool to bring them positive impact on the grade.</p>
 				
 			</li>
 			<li class="animated wow fadeInDown"  data-wow-delay=".6s">
@@ -222,7 +222,7 @@
 	<section class="solution wrapper">
 
 		<div class="animated wow fadeIn"><h2>Final Design</h2>
-		<p id="q">"How could we provide an efficient tool with down-to-earth content and positive effect to users?"</p></div>
+		<p id="q">"How could we design an efficient tool with down-to-earth content to make progress?"</p></div>
 
 		<p class="animated wow fadeInUp" id="s1">Based on interviews and surveys, we discovered that Youtube is popular media to get touch with English within users. However, most of users only regard it as an entertainment rather than a tool. Thus, we decided to start with making Youtube educational.</p>
 
