--- a/blushup.html
+++ b/blushup.html
@@ -42,35 +42,35 @@
 		
 	</section>
 
-	<section class="bg wrapper">
+	<section class="main-content">
 		<h2>Overview</h2>
-		<div class="subtitle"><p>Blushup is a startup company in New York City and it offers a platform for customers to reserve in-store makeup online. As a UI/UX designer, I worked closely with the CEO and the CTO to redesign our new platform. However, due to NDA, I'm only able to show a quick review of my design. Please hit me up and I am more than happy to share details with you!</p></div>
+		<p>Blushup is a startup company in New York City and it is an online platform for customers to reserve in-store makeup. As a UI/UX designer, I worked closely with the CEO and the CTO to redesign our new platform. However, due to NDA, I'm only able to show a quick preview of my design. Please hit me up and I am more than happy to share details with you!</p>
 		
-		<ul class="clearfix">
-			<li>
-				
-				<h2>My Role</h2>
-				<p>UI/UX Designer</p>
-			</li>
-			<li>
-			
-				<h2>Skills</h2>
-				<p>	Wirframe/Prototype <br>
-					Figma <br>
-					Adobe PS/AI</p>
-			</li>
-			<li>
-				<h2>Company</h2>
-				<p>Blushup</p>
-			</li>
-		</ul>
-
+		<div class="container text-center">
+  		<div class="row">
+    <div class="col">
+      <p class="role">My Role</p>
+      <p>UI/UX Designer</p>
+    </div>
+    <div class="col">
+      <p class="role">Timeline</p>
+      <p>January - May 2019
+    </div>
+    <div class="col">
+      <p class="role">Company</p>
+      <p>Blushup</p>
+    </div>
+  </div>
+</div>
 
 		<h2>Redesign Preview</h2>
-		<iframe style="border: 1; margin-left:20%; margin-top: 5%;" width="60%" height="700" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D2353%253A6%26viewport%3D445%252C469%252C0.2153937965631485%26scaling%3Dscale-down-width" allowfullscreen></iframe>
-	
 
-		<a href="https://blushup.com/" target="_blank"><p>Visit Blushup.com</p></a>
+		<div style="margin-left:20%;">
+
+		<iframe style="border: 1;" width="80%" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfUFp6aKfgBbo7diZE7hfQF3T%2FBlushup-June-2019-Launch%3Fnode-id%3D2353%253A6%26viewport%3D445%252C469%252C0.2153937965631485%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+		</div>
+
+		<p class="text-center"><a href="https://blushup.com/" target="_blank">Visit Blushup.com</a></p>
 
 	</section>
 
