--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 											<h1>Hey Y'all! <br>I'm Eric</h1>
-										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" target="blank">Download Resume <i class="icon-download4"></i></a></p>
+										 		<p><a class="btn btn-primary btn-learn" href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" target="blank">View Resume</a></p>
 											</div>
 					   				</div>
 					   			</div> 
@@ -124,7 +124,7 @@
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>a Designer</h1>
-												<p><a class="btn btn-primary btn-learn" href="https://www.linkedin.com/in/ycchi/" target="blank">View LinkedIn <i class="icon-linkedin22"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="#work">View Projects</a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -183,8 +183,8 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>Want to know more about me? <br> Download my resume below!</h2>
-										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Download <i class="icon-download-outline"></i></a>
+										<h2>Want to know more about me? <br> View my resume below!</h2>
+										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there<i class="icon-arrow-right-outline"></i></a>
 									</div>
 								</div>
 							</div>
