--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(work/img/mac.gif);">
+							<div class="project" style="background-image: url(work/img/mac.gif); width: 99%;">
 								<a href="SoCoolEng.html"><div class="desc">
 									<div class="con">
 										<h1>So Cool English</h1>
@@ -289,7 +289,7 @@
 
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/franklin.png); ">
+							<div class="project" style="background-image: url(images/franklin.png); width: 99%;">
 								<a href="franklin.html" ><div class="desc">
 									<div class="con">
 										<h1>Franklin</h1>
