--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/parkking.png); margin-left: 3.5%; width: 96.5%;">
-								<a href="parkking.html" target="blank"><div class="desc">
+								<a href="parkking.html"><div class="desc">
 									<div class="con">
 										<h1>Parkking</h1>
 										<span>Experience for automotive navigation</span>
