--- a/franklin.html
+++ b/franklin.html
@@ -63,12 +63,22 @@
   </div>
 </div>
 
-	<h2>Demo Video</h2>
+	<h2>Problem Spaces</h2>
+	<div class="text-center"><img class="problem-img" src="work/img/conversation.png" class="img-fluid" alt=""></div><br>
+	<p>According to our research, there are two big gaps between the user's expectations and current language learning tools. <br><br>
+Firstly, <strong>the lack of real-world context makes language learning impractical</strong>. Knowing how to pronounce and the definition of a word is not equal to how to use a word in daily life. Users could've spent tons of time on certain tools but couldn't apply what they have learned at the moment they need it the most. 
+<br><br>
+Secondly, <strong>nothing would be more helpful than personalized feedback and examples</strong>. Every person has different occasions for using a new language. Thus, specific and accurate feedback helps users to understand how to improve specifically. The best way to improve is to learn from their mistakes.</p>
+
+
+
+	<h2>Franklin Demo</h2>
 	
 
 	<div class="embed-responsive embed-responsive-16by9 text-center container">
   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Jsq8c9-f2r8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+	<p>
 
 
 
