--- a/index0429.html
+++ b/index0429.html
@@ -76,8 +76,8 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
+						<li><a href="#" data-nav-section="resume">resume</a></li>
 						<li><a href="#" data-nav-section="work">Work</a></li>
-						<li><a href="#" data-nav-section="resume">Resume</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -154,7 +154,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<div class="row" data-section="resume">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInUp">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-infinity-outline"></i></span>
@@ -180,7 +180,14 @@
 									</div>
 								</div>
 							</div>
-							
+							<div class="row">
+								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+									<div class="hire">
+										<h2>Want to know more about me? <br> View my resume below!</h2>
+										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there<i class="icon-arrow-right-outline"></i></a>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -299,23 +306,6 @@
 			</section>
 			
 		
-
-			<section class="colorlib-about" data-section="resume">
-				<div class="colorlib-narrow-content">
-
-					<div class="row">
-								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-									<span class="heading-meta">Resume</span>
-									<div class="hire">
-										<h2>Want to know more about me? <br> View my resume below!</h2>
-										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there<i class="icon-arrow-right-outline"></i></a>
-									</div>
-								</div>
-							</div>
-
-
-				</div>
-			</section>
 			
 			
 			
