--- a/fic.html
+++ b/fic.html
@@ -82,7 +82,7 @@
 
 	<section class="cd-section">
 		<div>
-			<h2>Key Foundings</h2>
+			<h2>Key Findings</h2>
 			<div style="height: 60vh">
 				<ul>
 				<li class="bullet-point-list text">• Inbalance Usage - 50% of the pageview went to the 10 most popular pages and only 25% of the pages had been visited. </li>
