--- a/fic.html
+++ b/fic.html
@@ -22,14 +22,15 @@
 			</div>
 			<p class="cover-title">Website Information Archectiture Evaluation & Redeisgn</p>
 			<p class="cover-title">Eric Chi</p>
+
 		</div>
 	</section>
 
 	<section class="cd-section">
 		<div>
-			<h2>Abstract</h2>
+			<h2>Problem Space</h2>
 			<div style="height: 60vh">
-			<p class="abstract-text text">The Faculty Innovation Center (FIC) of UT Austin provides innovative teaching and learning strategies and tools that help faculty and students to achieve their goal successfully. However, due to the lack of a thorough plan when building the sites, it's difficult for users to navigate through the resources. My job is to help them update their information architecture and deliver a wonderful experience to users.</p>
+			<p class="abstract-text text">The Faculty Innovation Center (FIC) of UT Austin provides innovative teaching and learning strategies and tools that help faculty and students to achieve their goal successfully. However, due to the lack of a thorough plan when building the sites, it's difficult for users to navigate through the resources. How might we update the information architeture to classify the content in a clear and understandable way?</p>
 			</div>
 		</div>
 	</section>
@@ -69,7 +70,7 @@
 		<div>
 			<h2>Tools for Website Analytics</h2>
 			<div style="height: 60vh">
-					<p class="text analytics-text">In order to better understand how users interact with the website, I installed two powerful website analytics tools. One is Google Analytics focuses on quantitative data such as pageview, user, and traffic. The other one is Crazy Egg which provides qualitative data and more detailed statistics of specific pages, for example, recording, heatmap, and click rate. </p>
+					<p class="text analytics-text">In order to better understand how users interact with the website, I installed two powerful tools. One is Google Analytics focuses on quantitative data such as pageview, user, and traffic. The other one is Crazy Egg which provides qualitative data and more detailed statistics of specific pages, for example, recording, heatmap, and click rate. </p>
 					<div class="row">
 					<div class="col-3 col-md-3"></div>
 					<div class="col-3 col-md-3"><img style="width: 70%; margin-left: 15%;" src="capstone/img/google-analytics.svg"><p class=" text-center font-weight-bold analytics-tool">Google Analytics</p></div>
