--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 						</div></a>
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/utshield_white.jpg); margin-left: 3.5%; width: 96.5%;">
+							<div class="project" style="background-image: url(images/fic.gif); margin-left: 3.5%; width: 96.5%;">
 								<a href="fic.html" ><div class="desc">
 									<div class="con">
 										<h1>FIC Website</h1>
