--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<li><a href="https://dribbble.com/ycchi" target="blank"><i class="icon-dribbble2"></i></a></li>
 				</ul>
 
-				<p class="contact-text"><small>Made with <a href="https://colorlib.com" target="_blank">❤</a> </a></span></small></p>
+				<p class="contact-text"><small>Made with <a href="https://colorlib.com" target="_blank">💙</a> </a></span></small></p>
 
 				
 			</div>
