--- a/fic.html
+++ b/fic.html
@@ -148,9 +148,11 @@
 		<div>
 			<h2>Evaluation</h2>
 			<div style="height: 60vh">
-				<li class="bullet-point-list text">1. A/B Testing - Only half of our visitors will see the updated content and then the percentage of sample size will be dynamic based on the difference of visitor's behavior.</li>
-				<li class="bullet-point-list text">2. Pop-up Survey - This survey will include 4 questions, who are you, why you visit the FIC website, how easy/difficult for you to find information and other comments.</li>
-				<li class="bullet-point-list text">3. Focus Group - We'll recruit users from a variety of backgrounds to do focus groups and it will focus on the flow and structure of the FIC website.</li>
+				<ul>
+				<li class="bullet-point-list text">A/B Testing - Only half of our visitors will see the updated content and then the percentage of sample size will be dynamic based on the difference of visitor's behavior.</li>
+				<li class="bullet-point-list text">Pop-up Survey - This survey will include 4 questions, who are you, why you visit the FIC website, how easy/difficult for you to find information and other comments.</li>
+				<li class="bullet-point-list text">Focus Group - We'll recruit users from a variety of backgrounds to do focus groups and it will focus on the flow and structure of the FIC website.</li>
+				</ul>
 			</div>
 		</div>
 	</section>
