--- a/franklin.html
+++ b/franklin.html
@@ -44,7 +44,7 @@
 	<section class="main-content">
 
 	<h2>Overview</h2>
-	<p>Franklin is an AI assistant that helps people to improve language skills through conversations with Franklin so that she is prepared for any situation. As a designer, I took the responsibility to design the experience from scratch. Learning a new language is always tough for people and my team and I tried making the process painless and joyful.</p>
+	<p>Franklin is an AI assistant that helps people to improve language skills with real-world contexts. By interacting with Franklin, it gives users personalized feedbacks and clear goals for users to practice and improve specific weaknesses. As a designer, I took the responsibility to design the experience from scratch. Learning a new language is always tough for people and my team and I tried making the process painless and joyful.</p>
 	
 	<div class="container text-center">
   <div class="row">
