add substitute for qeesi

--- a/qeesi.html
+++ b/qeesi.html
@@ -64,6 +64,7 @@
 </div>
 
 	<h2>Process & Outcome</h2>
+	<p class="text-center">If the images in Figma is pixelated, <a href="https://utexas.box.com/v/qeesibyericchi" target="blank">here's a pdf version</a></p>
 
 <div style="margin-left:10%;">
 
