--- a/sap.html
+++ b/sap.html
@@ -7,11 +7,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<meta name="author" content="Eric Chi">
-	<meta name="description" content="ui ux intern Rackspace ObjectRocket design research designer Eric Chi"/>
+	<meta name="description" content="SAP design challenge for UX Designer by Eric Chi"/>
 	<link rel="stylesheet" type="text/css" href="work/css/reset.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="work/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="work/css/rackspace.css">
+	<link rel="stylesheet" type="text/css" href="work/css/sap.css">
 	<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <script type="text/javascript" src="work/js/jquery.js"></script>
     <script type="text/javascript" src="work/js/fancybox.js"></script>
@@ -29,13 +29,13 @@
 
 	<section class="billboard light">
 		<header>
-			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="images/eric-white.svg" alt=""/></a>
 			
 		</header>
 
 		<div class="caption light clearfix focus-in-contract-bck">
-			<h1>ObjectRocket - New Database Platform</h1>
-			<p>UX Intern</p>
+			<h1>SAP Store & AppCenter</h1>
+			<p>Design Challenge</p>
 			<hr>
 		</div>
 		
@@ -63,8 +63,8 @@
   </div>
 </div>
 
-	<h2>Process</h2>
-	<p>The new database platform had several brand new features that we didn't have on previous ones such as fully managed metrics service, role-based access control, new datastores, etc. Thus, the process was all about finding and applying data that can improve the platform.</p>
+	<h2>Background</h2>
+	<p>SAP AppCenter is a marketplace where companies buy and try products built by SAP Partners.  These products usually extend SAP Product functionality in some way.  For example, imagine that there was an SAP Product where you could store all the information about a TV you manufactured, including the current warranty for the TV (assume this is called “SAP Manufacturing Database”.)  However, the product didn’t have anywhere to handle different versions of the TV warranty.  In this case an SAP Partner built an extension to the product that allowed for the customer to store multiple versions of the TV warranty (assume this is called “Warranty Extender for SAP”.)    In this example, “SAP Manufactoring Database” is the type of product that would sell on SAP Store and “Warrenty Extender for SAP” is the type of product that would sell on SAP AppCenter. </p>
 	<br><br>
 
 	<div class="container text-center">
@@ -110,7 +110,7 @@
 		<li><div class="title">• Coordinate goals of business and users</div>
 		<p>Sometimes there are conflicts between a business' and users' goals and reaching out to feedbacks and thoughts is always the best way to solve the conflicts.</p></li>
 		<li><div class="title">• Appreciation and gratitude make the world better</div>
-		<p>One thing I learned about ObjectRocket is that people are generous about giving kudos and credits! It makes the environment supportive and cooperative.</p></li>
+		<p>One thing I learned about ObjectRocket is that people are generous about express appreciation and gratitude and it makes everyone supportive and cooperative.</p></li>
 	</ul>
 
 	<div class="text-center">
