--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<div class="aboutme">
-										<p>Eric Chi, a digital <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>UX & Product Designer</strong> </a> studying Master of Information Science at UT Austin. </p> 
+										<p>Eric Chi, a digital <a href="#YouFoundtheEasterEgg!" class="effect-shine"><strong>UX & Product Designer</strong> </a> <del>studying</del> recently graduated from M.S Information Science at UT Austin. </p> 
 										<p>I'm passionate about creating wonderful experience that brings people closer.</a></p></div>
 										
 
