update hero img width

--- a/franklin.html
+++ b/franklin.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-	<section class="billboard light">
+	<section class="billboard dark">
 		<header>
 			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
 			
