--- a/parkking.html
+++ b/parkking.html
@@ -34,7 +34,7 @@
 		</header>
 
 		<div class="caption light clearfix focus-in-contract-bck">
-			<h1>Prakking</h1>
+			<h1>Parkking</h1>
 			<p>Product/UX/VUI</p>
 			<hr>
 		</div>
