--- a/sap.html
+++ b/sap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Rackspace | Eric Chi's Portfolio</title>
+	<title>SAP | Eric Chi's Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -43,81 +43,20 @@
 
 	<section class="main-content">
 
-	<h2>Overview</h2>
-	<p>In summer 2019, I did a three month internship at Rackspace. I worked as a UX intern with the UX team of ObjectRocket and I was responsible for evaluating and improving their new database platform which helped increase the satisfaction of users and bring new customers.</p>
-	
-	<div class="container text-center">
-  <div class="row">
-    <div class="col">
-      <p class="role">My Role</p>
-      <p>UX Intern</p>
-    </div>
-    <div class="col">
-      <p class="role">Timeline</p>
-      <p>May - August 2019
-    </div>
-    <div class="col">
-      <p class="role">Company</p>
-      <p>ObjectRocket/Rackspace</p>
-    </div>
-  </div>
-</div>
-
 	<h2>Background</h2>
-	<p>SAP AppCenter is a marketplace where companies buy and try products built by SAP Partners.  These products usually extend SAP Product functionality in some way.  For example, imagine that there was an SAP Product where you could store all the information about a TV you manufactured, including the current warranty for the TV (assume this is called “SAP Manufacturing Database”.)  However, the product didn’t have anywhere to handle different versions of the TV warranty.  In this case an SAP Partner built an extension to the product that allowed for the customer to store multiple versions of the TV warranty (assume this is called “Warranty Extender for SAP”.)    In this example, “SAP Manufactoring Database” is the type of product that would sell on SAP Store and “Warrenty Extender for SAP” is the type of product that would sell on SAP AppCenter. </p>
-	<br><br>
+	<p><a href="https://www.sapstore.com/" target="blank">SAP Store</a> - is an online shop for SAP Products built by SAP.</p>
+	<p><a href="https://www.sapappcenter.com/en/" target="blank">SAP AppCenter</a> - is a marketplace where companies buy and try products built by SAP Partners. These products usually extend SAP Product functionality in some way.</p>  
+	<p>
+	For example, imagine that there was an SAP Product where you could store all the information about a TV you manufactured, including the current warranty for the TV (assume this is called “SAP Manufacturing Database”.)  However, the product didn’t have anywhere to handle different versions of the TV warranty.  In this case an SAP Partner built an extension to the product that allowed for the customer to store multiple versions of the TV warranty (assume this is called “Warranty Extender for SAP”.) In this example, “SAP Manufactoring Database” is the type of product that would sell on SAP Store and “Warrenty Extender for SAP” is the type of product that would sell on SAP AppCenter.</p>
 
-	<div class="container text-center">
-  <div class="row">
-    <div class="col">
-      <img src="work/img/platform-audit.svg">
-    </div>
-    <div class="col">
-      <img src="work/img/identify-gaps.svg">
-    </div>
-    <div class="col">
- 		<img src="work/img/conduct-user-testing.svg">
-    </div>
-     <div class="col">
- 		<img src="work/img/analyze-results.svg">
-    </div>
-     <div class="col">
- 		<img src="work/img/design-solutions.svg">
-    </div>
-     <div class="col">
- 		<img src="work/img/validate-reiterate.svg">
-    </div>
-  </div>
-</div>
+	<h2>Challenge</h2>
+	<p class="challenge">"Design the search function for SAP customers by combining SAP Store and SAP AppCenter into one single website"</p>
+	
+	<h2>Process</h2>
+	<img src="work/img/sap-process.svg">
+</section>
 
-	<h2>Accomplishments</h2>	
-	<ol>
-		<li><p>1. Performed an audit on both new and old platforms to identify problems.</p></li>
-		<li><p>2. Analyzed current user flows and past customer's support tickets to uncover potential gapsbetween user's expectations and the design. </p></li>
-		<li><p>3. Created a user testing plan according to the previous findings.</p></li>
-		<li><p>4. Conducted the user tests with 8 real customers and analyzed the results.</p></li>
-		<li><p>5. Designed solutions based on the insights from user testings and the business's goals of the corporation.</p></li>
-		<li><p>6. Increased satisfaction of users by 40%.</p></li>
-	</ol>
 
-	<h2>Takeaways & Lessons</h2>
-
-	<ul>
-		<li><div class="title">• Justify design decision</div>
-		<p>There are rationales behind every design. The ability to compare and justify design decisions is an essential skill for a designer.</p></li>
-		<li><div class="title">• Define gaps and move forward under ambiguity</div>
-		<p>Not every problem will be well-defined so a designer has to zoom in and out during the process to ensure the design is on the right track.</p></li>
-		<li><div class="title">• Coordinate goals of business and users</div>
-		<p>Sometimes there are conflicts between a business' and users' goals and reaching out to feedbacks and thoughts is always the best way to solve the conflicts.</p></li>
-		<li><div class="title">• Appreciation and gratitude make the world better</div>
-		<p>One thing I learned about ObjectRocket is that people are generous about express appreciation and gratitude and it makes everyone supportive and cooperative.</p></li>
-	</ul>
-
-	<div class="text-center">
-	<img width="50%" src="work/img/eric-or.jpg" class="img-fluid rounded" alt=" ">
-	</div>
-
-	</section>
 
 	<hr class="container">
 	<br>
