--- a/sap.html
+++ b/sap.html
@@ -54,6 +54,15 @@
 	
 	<h2>Process</h2>
 	<img src="work/img/sap-process.svg">
+
+	<h2>Understand</h2>
+	<p>Deconstruct the task by answering several questions:
+		<ul>
+			<li>Why is this feature important?</li>
+			<li>What problem are we trying to solve?</li>
+			<li>How does this product benefit customers?</li> 
+			<li>What business opportunity does it create?</li>
+		</ul>
 </section>
 
 
